updated yahtzee -- still no RL

--- a/yahtzee.ipynb
+++ b/yahtzee.ipynb
@@ -6,38 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Select mode:\n",
-      "1. Simulation Mode\n",
-      "2. Calculation Mode\n",
-      "3. Performance Mode\n",
-      "4. Exit\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Performance over 100 games:\n",
-      "Mean score: 55.7\n",
-      "Median score: 54.0\n"
-     ]
-    }
-   ],
-   "source": [
     "import random\n",
     "from collections import OrderedDict\n",
     "import numpy as np\n",
@@ -87,7 +55,7 @@
     "            for i in range(5):\n",
     "                if not keep_mask[i]:\n",
     "                    self.dice[i] = random.randint(1,6)\n",
-    "        self.dice.sort()\n",
+    "        # self.dice.sort()\n",
     "        self.rolls_left -= 1\n",
     "\n",
     "    def get_possible_moves(self):\n",
@@ -324,6 +292,224 @@
     "    #     break\n",
     "    else:\n",
     "        print(\"Invalid choice\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Turn 1 ===\n",
+      "\n",
+      "Dice: [2, 4, 4, 5, 5]\n",
+      "Kept: [1, 2, 4]\n",
+      "\n",
+      "Dice: [1, 2, 2, 4, 5]\n",
+      "Kept: [4, 5]\n",
+      "\n",
+      "Final dice: [2, 3, 4, 4, 5]\n",
+      "Chose category: Sixes (Score: 0)\n",
+      "Current scores: {'Sixes': 0}\n",
+      "Total Score: 0\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 2 ===\n",
+      "\n",
+      "Dice: [1, 3, 3, 4, 6]\n",
+      "Kept: [3, 3, 3]\n",
+      "\n",
+      "Dice: [2, 3, 3, 3, 4]\n",
+      "Kept: [4, 4]\n",
+      "\n",
+      "Final dice: [3, 4, 4, 4, 4]\n",
+      "Chose category: Threes (Score: 0)\n",
+      "Current scores: {'Threes': 0, 'Sixes': 0}\n",
+      "Total Score: 0\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 3 ===\n",
+      "\n",
+      "Dice: [2, 2, 3, 4, 5]\n",
+      "Kept: [5]\n",
+      "\n",
+      "Dice: [1, 4, 4, 5, 6]\n",
+      "Kept: [5]\n",
+      "\n",
+      "Final dice: [1, 1, 1, 5, 5]\n",
+      "Chose category: Fours (Score: 0)\n",
+      "Current scores: {'Threes': 0, 'Fours': 0, 'Sixes': 0}\n",
+      "Total Score: 0\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 4 ===\n",
+      "\n",
+      "Dice: [1, 1, 1, 2, 3]\n",
+      "Kept: [6]\n",
+      "\n",
+      "Dice: [1, 3, 5, 6, 6]\n",
+      "Kept: [6]\n",
+      "\n",
+      "Final dice: [1, 1, 3, 6, 6]\n",
+      "Chose category: Fives (Score: 12)\n",
+      "Current scores: {'Threes': 0, 'Fours': 0, 'Fives': 12, 'Sixes': 0}\n",
+      "Total Score: 12\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 5 ===\n",
+      "\n",
+      "Dice: [1, 3, 3, 4, 4]\n",
+      "Kept: [5]\n",
+      "\n",
+      "Dice: [1, 2, 2, 4, 5]\n",
+      "Kept: [1, 2, 6]\n",
+      "\n",
+      "Final dice: [1, 2, 2, 5, 6]\n",
+      "Chose category: Yahtzee (Score: 0)\n",
+      "Current scores: {'Threes': 0, 'Fours': 0, 'Fives': 12, 'Sixes': 0, 'Yahtzee': 0}\n",
+      "Total Score: 12\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 6 ===\n",
+      "\n",
+      "Dice: [1, 1, 2, 3, 3]\n",
+      "Kept: [1]\n",
+      "\n",
+      "Dice: [1, 1, 2, 4, 5]\n",
+      "Kept: [1, 1, 2, 4, 5]\n",
+      "\n",
+      "Final dice: [1, 1, 2, 4, 5]\n",
+      "Chose category: Ones (Score: 0)\n",
+      "Current scores: {'Ones': 0, 'Threes': 0, 'Fours': 0, 'Fives': 12, 'Sixes': 0, 'Yahtzee': 0}\n",
+      "Total Score: 12\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 7 ===\n",
+      "\n",
+      "Dice: [2, 2, 3, 4, 6]\n",
+      "Kept: [2, 4]\n",
+      "\n",
+      "Dice: [2, 2, 2, 4, 4]\n",
+      "Kept: [2, 4, 4, 4]\n",
+      "\n",
+      "Final dice: [2, 2, 4, 4, 4]\n",
+      "Chose category: Three of a Kind (Score: 16)\n",
+      "Current scores: {'Ones': 0, 'Threes': 0, 'Fours': 0, 'Fives': 12, 'Sixes': 0, 'Three of a Kind': 16, 'Yahtzee': 0}\n",
+      "Total Score: 28\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 8 ===\n",
+      "\n",
+      "Dice: [3, 5, 5, 5, 6]\n",
+      "Kept: [1, 5, 6]\n",
+      "\n",
+      "Dice: [1, 1, 3, 5, 6]\n",
+      "Kept: [1, 3, 5, 6]\n",
+      "\n",
+      "Final dice: [1, 1, 3, 5, 6]\n",
+      "Chose category: Twos (Score: 6)\n",
+      "Current scores: {'Ones': 0, 'Twos': 6, 'Threes': 0, 'Fours': 0, 'Fives': 12, 'Sixes': 0, 'Three of a Kind': 16, 'Yahtzee': 0}\n",
+      "Total Score: 34\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 9 ===\n",
+      "\n",
+      "Dice: [2, 3, 4, 4, 6]\n",
+      "Kept: [2, 4]\n",
+      "\n",
+      "Dice: [1, 2, 3, 4, 5]\n",
+      "Kept: [2, 3]\n",
+      "\n",
+      "Final dice: [1, 2, 3, 4, 6]\n",
+      "Chose category: Large Straight (Score: 0)\n",
+      "Current scores: {'Ones': 0, 'Twos': 6, 'Threes': 0, 'Fours': 0, 'Fives': 12, 'Sixes': 0, 'Three of a Kind': 16, 'Large Straight': 0, 'Yahtzee': 0}\n",
+      "Total Score: 34\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 10 ===\n",
+      "\n",
+      "Dice: [1, 2, 4, 4, 6]\n",
+      "Kept: [1, 1, 6]\n",
+      "\n",
+      "Dice: [1, 1, 2, 4, 6]\n",
+      "Kept: [6]\n",
+      "\n",
+      "Final dice: [3, 4, 4, 4, 6]\n",
+      "Chose category: Small Straight (Score: 0)\n",
+      "Current scores: {'Ones': 0, 'Twos': 6, 'Threes': 0, 'Fours': 0, 'Fives': 12, 'Sixes': 0, 'Three of a Kind': 16, 'Small Straight': 0, 'Large Straight': 0, 'Yahtzee': 0}\n",
+      "Total Score: 34\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 11 ===\n",
+      "\n",
+      "Dice: [3, 3, 3, 4, 6]\n",
+      "Kept: [6, 6]\n",
+      "\n",
+      "Dice: [2, 3, 4, 6, 6]\n",
+      "Kept: [6, 6]\n",
+      "\n",
+      "Final dice: [2, 3, 4, 6, 6]\n",
+      "Chose category: Four of a Kind (Score: 0)\n",
+      "Current scores: {'Ones': 0, 'Twos': 6, 'Threes': 0, 'Fours': 0, 'Fives': 12, 'Sixes': 0, 'Three of a Kind': 16, 'Four of a Kind': 0, 'Small Straight': 0, 'Large Straight': 0, 'Yahtzee': 0}\n",
+      "Total Score: 34\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 12 ===\n",
+      "\n",
+      "Dice: [1, 2, 2, 5, 5]\n",
+      "Kept: []\n",
+      "\n",
+      "Dice: [1, 2, 2, 6, 6]\n",
+      "Kept: [1, 2, 2, 6]\n",
+      "\n",
+      "Final dice: [1, 2, 2, 4, 6]\n",
+      "Chose category: Full House (Score: 0)\n",
+      "Current scores: {'Ones': 0, 'Twos': 6, 'Threes': 0, 'Fours': 0, 'Fives': 12, 'Sixes': 0, 'Three of a Kind': 16, 'Four of a Kind': 0, 'Full House': 0, 'Small Straight': 0, 'Large Straight': 0, 'Yahtzee': 0}\n",
+      "Total Score: 34\n",
+      "-------------------\n",
+      "\n",
+      "=== Turn 13 ===\n",
+      "\n",
+      "Dice: [4, 5, 5, 5, 6]\n",
+      "Kept: [4, 5, 6]\n",
+      "\n",
+      "Dice: [2, 4, 5, 5, 6]\n",
+      "Kept: [2, 2, 3]\n",
+      "\n",
+      "Final dice: [2, 2, 3, 4, 5]\n",
+      "Chose category: Chance (Score: 16)\n",
+      "Current scores: {'Ones': 0, 'Twos': 6, 'Threes': 0, 'Fours': 0, 'Fives': 12, 'Sixes': 0, 'Three of a Kind': 16, 'Four of a Kind': 0, 'Full House': 0, 'Small Straight': 0, 'Large Straight': 0, 'Yahtzee': 0, 'Chance': 16}\n",
+      "Total Score: 50\n",
+      "-------------------\n",
+      "\n",
+      "Game Over! Final Score: 50\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yahtzee\n",
+    "\n",
+    "\n",
+    "class YahtzeeAgent:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def choose_dice_to_keep(self, current_dice, rolls_left):\n",
+    "        return [random.randint(0,1) for _ in range(5)]  # Placeholder: keep all dice\n",
+    "\n",
+    "    def choose_category(self, game_state):\n",
+    "        available = [cat for cat, score in game_state['categories'].items() if score is None]\n",
+    "        return random.choice(available)  # Placeholder: random choice\n",
+    "    \n",
+    "    \n",
+    "agent = yahtzee.YahtzeeAgent()\n",
+    "simulation_mode(agent)\n",
+    "\n"
    ]
   }
  ],
